      in the relevant trees.  (Martin Pool, #3619)

    * Add '.hg' to the default ignore list.  (Martin Pool)

    * 'knit' is now the default disk format. This improves disk performance and
      utilization, increases incremental pull performance, robustness with SFTP
      and allows checkouts over SFTP to perform acceptable. 
      (Robert Collins, Aaron Bentley).

  CHANGES:

    * Commit is now verbose by default, and shows changed filenames and the 
      new revision number.  (Robert Collins, Martin Pool)

    * Unify 'mv', 'move', 'rename'.  (#5379, Matthew Fuller)

    * 'bzr -h' shows help.  (#35940, Martin Pool, Ian Bicking)

    * Make 'pull' and 'push' remember location on failure using --remember.
      (Olaf Conradi)

  INTERNALS:
  
    * The internal storage of history, and logical branch identity have now
      been split into Branch, and Repository. The common locking and file 
      management routines are now in bzrlib.lockablefiles. 
      (Aaron Bentley, Robert Collins, Martin Pool)

    * Transports can now raise DependencyNotPresent if they need a library
      which is not installed, and then another implementation will be 
      tried.  (Martin Pool)

    * Remove obsolete (and no-op) `decode` parameter to `Transport.get`.  
      (Martin Pool)

    * Using Tree Transform for merge, revert, tree-building

    * WorkingTree.create, Branch.create, WorkingTree.create_standalone,
      Branch.initialize are now deprecated. Please see BzrDir.create_* for
      replacement API's. (Robert Collins)

    * New BzrDir class represents the .bzr control directory and manages
      formatting issues. (Robert Collins)

    * New repository.InterRepository class encapsulates Repository to 
      Repository actions and allows for clean selection of optimised code
      paths. (Robert Collins)

    * bzrlib.fetch.fetch and bzrlib.fetch.greedy_fetch are now deprecated,
      please use 'branch.fetch' or 'repository.fetch' depending on your